--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "stomache-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "nodemon index.js",
-    "stop": "killall node",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "bcrypt": "^5.0.1",
-    "express": "^4.18.1"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
-  }
+   "name": "stomache-backend",
+   "version": "1.0.0",
+   "description": "",
+   "main": "index.js",
+   "scripts": {
+      "start": "ts-node src/index.ts",
+      "stop": "killall node",
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "typeorm": "typeorm-ts-node-commonjs"
+   },
+   "keywords": [],
+   "author": "",
+   "license": "ISC",
+   "dependencies": {
+      "bcrypt": "^5.0.1",
+      "express": "^4.18.1",
+      "mysql": "^2.18.1",
+      "pg": "^8.4.0",
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "^0.3.6"
+   },
+   "devDependencies": {
+      "@types/node": "^16.11.41",
+      "nodemon": "^2.0.16",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
+   }
 }
