--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "serve": "nodemon index.js",
-    "start": "ts-node src/index.ts",
+    "dev": "nodemon --exec 'ts-node' src/index.ts",
     "stop": "killall node",
     "test": "echo \"Error: no test specified\" && exit 1",
     "typeorm": "typeorm-ts-node-commonjs"
@@ -21,9 +21,10 @@
     "typeorm": "0.3.6"
   },
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.11.10",
     "nodemon": "^2.0.16",
-    "ts-node": "10.7.0",
-    "typescript": "4.5.2"
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.4"
   }
 }
