--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "nodemon index.js",
+    "serve": "nodemon app.js",
     "dev": "nodemon --exec 'ts-node' src/index.ts",
     "stop": "killall node",
     "test": "echo \"Error: no test specified\" && exit 1",
